Fixing white space behavior

--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 html {
-  overflow: hidden;
   overscroll-behavior: none;
 }
 body {
   height: 100vh;
-  overflow: auto;
   padding: 35px;
   display: flex;
   flex-direction: column;
